--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "8.10.0",
+    "yarn": "1.4.0"
   }
-  
 }
